Fix links to Vendor Dashboard from all cards Fix status of ODF Operator in Status Card Fix CSS to align cards Refactor constants and types

--- a/src/components/odf-dashboard/activity-card/activity-card.scss
+++ b/src/components/odf-dashboard/activity-card/activity-card.scss
@@ -1,4 +1,4 @@
 .odf-activityCard {
-  max-height: 27.75em;
+  max-height: 385px;
   overflow-y: auto;
 }
